<resources>
    <string name="app_name">Panthera</string>
    <string name="user">User</string>
    <string name="catagories">Catagories</string>
    <string name="what_do_you_want_to_ask">What do you want to ask ?</string>
    <string name="question">Question</string>
    <string name="what_is_your_question_title">What is your question title ?</string>
    <string name="select_category">Select category</string>
    <string name="question_title">Question Title</string>
    <string name="ask_your_question">Ask Your Question</string>
    <string name="ask_now">Ask now</string>
    <string name="hello">Hello</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
</resources>