<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#04c900"
    tools:context=".PostQuestionActivity">

    <TextView
        android:id="@+id/categories"
        android:layout_width="149dp"
        android:layout_height="33dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/catagories"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/askQuestion" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="307dp"
        android:layout_height="114dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/what_do_you_want_to_ask"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingBottom="40dp"
        android:shadowColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/question"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/what_is_your_question_title"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTitle" />


    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/select_category"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories" />

    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="155dp"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:spinnerMode="dropdown"
        android:text="@string/question_title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <TextView
        android:id="@+id/askQuestion"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/itim"
        android:text="@string/ask_your_question"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/askNow"
        android:layout_width="164dp"
        android:layout_height="62dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/custom_input"
        android:text="@string/ask_now"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.448"
        tools:text="Ask now" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/hello"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>